--- a/style.css
+++ b/style.css
@@ -3,9 +3,43 @@ body{
     background-image:url("external-content.duckduckgo.com.jpg");
     background-size: cover;
     margin:0px;
-    overflow: hidden;
+    overflow:hidden;
    
 }
+#message{
+    background-color: rgba(137, 43, 226, 0.247);
+    width:100vw;
+    height: 100vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    text-align: center;
+    position: absolute;
+    color: rgb(11, 106, 122);
+    font-size: 10vh;
+    font-weight: 800;
+    font-style: italic;
+    user-select: none;
+    
+} 
+
+#bn{
+    
+    background-image: linear-gradient(100000deg, #a300ee, #fbff05);
+    background-clip: text;
+    color: transparent;
+    background-size: 100%;
+    margin-top:45vh;
+    
+   
+}
+  
+  .hidden {
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s 1s, opacity 1s linear;
+  }
+  
 .center_div{
     margin-left:35vw;
     
@@ -35,6 +69,11 @@ body{
 
 
 }
+.grid img:hover{
+  
+        transform: scale(1.2);
+        filter:saturate(8);
+}
 
 .grid{
     width: 100vw;
@@ -51,15 +90,13 @@ body{
 }
 .creanga-roz{
     grid-area:creanga-roz;
-   
-    
+
 }
 .creanga-roz img{
     position:absolute;
-    height:450px;
-    width:600px;
-    margin-top: -50px;
-    margin-left: -30px;
+    width:50vh;
+    left: -18px;
+    top: -20px;
 }
 
 .floare-galbena{
@@ -83,24 +120,31 @@ body{
     transform: scaleX(-1) rotate(-10deg);
 }
 #stars{
-    margin-top:200px;
+    margin-top:220px;
     margin-left: -50px
 }
+
+#stars:hover{
+    transform: scale(1);
+}
+
 .pasare-floare-rama{
     grid-area:pasare-floare-rama;
 }
 .pasare-floare-rama img{
     position:absolute;
-}
-#fl{
-    width:300px;
+        width:300px;
     height: 300px;
     margin-left: 130px;
     margin-top:60px;
-    transform: rotate(20deg);
+    /* transform: rotate(20deg); */
 }
+#fl{
+    transform: rotate(20deg);
+} 
 #ps{
-  margin-top:-50px;
+  margin-top:-20px;
+  margin-left: -10px;
 }
 
 .creanga-mar{
@@ -155,8 +199,6 @@ body{
 }
 .floare-portocalie-fluture img{
     position:absolute;
-}
-#gb{
     width: 300px;
     height: 400px;
     margin-left: -60px;
@@ -259,3 +301,16 @@ body{
     margin-left: -150px;
     margin-top:-100px;
 }
+
+#globe_s{
+    position:absolute;
+    width:15vh;
+    transform: translate(889%, 300%);
+  }
+  
+#globe_d{
+    position:absolute;
+    width:15vh;
+    transform: translate(889%, 300%);
+    opacity:0;
+  }
